Fixed horizontal scrollbar being in the center of the screen when viewing the site from Edge or explorer browsers

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,6 @@ html {
     margin: 0 auto;
     height: 100%;
     overflow-x: hidden;
-    overflow-y: scroll;
 }
 
 /* DON'T REPEAT YOURSELF! */
